@@ -9,9 +9,10 @@ tasks.whenTaskAdded { task ->
 apply plugin: 'java'
 apply plugin: 'application'
 
-// JDK 8
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 mainClassName = 'edu.mcw.rgd.goa.GoAnnotManager'
 String myAppName = 'go-rat-annotation-pipeline'
 
@@ -22,14 +23,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.8.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
-    implementation 'org.springframework:spring-beans:5.3.5'
-    implementation 'org.springframework:spring-jdbc:5.3.5'
+    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'commons-net:commons-net:3.10.0'
+    implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
+    implementation 'org.springframework:spring-jdbc:6.0.14'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
